// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClientsPage when finished loading correctly renders 1`] = `
<div>
  <PageHeader
    bsClass="page-header"
  >
    Clients
  </PageHeader>
  <Component
    clients="list-of-clients"
  />
</div>
`;

exports[`ClientsPage when loading renders with loading information 1`] = `
<div>
  <PageHeader
    bsClass="page-header"
  >
    Clients
  </PageHeader>
  <Alert
    bsClass="info"
    bsStyle="info"
    closeLabel="Close alert"
  >
    Fetching clients...
  </Alert>
</div>
`;

exports[`ClientsPage with error renders with error bar 1`] = `
<div>
  <PageHeader
    bsClass="page-header"
  >
    Clients
  </PageHeader>
  <Alert
    bsClass="error"
    bsStyle="info"
    closeLabel="Close alert"
  >
    Could not load clients | 
    an error
  </Alert>
</div>
`;
